Mobile nav issue

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 
 <body class="home-page">
-    <nav class="navbar navbar-inverse navbar-default" data-spy="affix" data-offset-top="0">
+    <nav class="navbar navbar-inverse navbar-fixed-top" data-spy="affix" data-offset-top="0">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
