--- a/index.html
+++ b/index.html
@@ -86,53 +86,58 @@
             </div><!--/.nav-collapse -->
         </div>
     </nav>
-    <div class="content">
-        <section id="code-video">
-            <div class="homepage-hero-module">
-                <div class="video-container">
-                    <div class="filter"></div>
-                    <video autoplay loop class="fillWidth">
-                        <source src="/videos/Relaxation/Relaxation.mp4" type="video/mp4" />Your browser does not support the video tag. I suggest you upgrade your browser.
-                        <source src="/videos/Relaxation/Relaxation.webm" type="video/webm" />Your browser does not support the video tag. I suggest you upgrade your browser.
-                    </video>
-                    <div class="poster hidden">
-                        <img src="/videos/Relaxation/Relaxation.jpg" alt="">
-                    </div>
+    <div id="intro_video">
+        <div class="homepage-hero-module">
+            <div class="video-container">
+                <div class="filter"></div>
+                <video autoplay loop class="fillWidth">
+                    <source src="/videos/Relaxation/Relaxation.mp4" type="video/mp4" />Your browser does not support the video tag. I suggest you upgrade your browser.
+                    <source src="/videos/Relaxation/Relaxation.webm" type="video/webm" />Your browser does not support the video tag. I suggest you upgrade your browser.
+                </video>
+                <div class="poster hidden">
+                    <img src="/videos/Relaxation/Relaxation.jpg" alt="">
                 </div>
             </div>
-            <div class="text-content">
-                <h5 class="hello">Hello, world!</h5>
-                <h5 class="jordan">
-                    Made with
-                    <i class="fa fa-heart"></i>
-                    by Jordan McArdle
-                </h5>
-            </div>
-        </section>
-        <section id="story-freext">
-            <article>
-                <h1>Drebin</h1>
-                <p>
-                    <strong>Frank</strong>
-                    WOOO!!!
-                </p>
-            </article>
-            <div class="parallax background-shoes" data-velocity="-.1"></div>
-            <div class="parallax foreground-shoes" data-velocity="-.5" data-fit="525"></div>
-            <!-- <div class="black-bar"></div> -->
-        </section>
-        <section id="bottle">
-            <article>
-                <h1>Whaddup</h1>
-                <p>
-                    <strong>J MAC</strong>
-                    This is my site!!!!!
-                </p>
-            </article>
-            <div class="parallax" data-velocity="-.3"></div>
-        </section>
+        </div>
+        <div class="text-content">
+            <h5 class="hello">Hello, world!</h5>
+            <h5 class="jordan">
+                Made with
+                <i class="fa fa-heart"></i>
+                by Jordan McArdle
+            </h5>
+        </div>
     </div>
-    <section></section>
+    <div id="about" class="container">
+        <div class="row">
+            <div class="intro_title centered">
+                <h2 class="bs">
+                    I have a passion for web development <br />
+                    with a focus on the user experience.
+                </h2>
+            </div>
+            <div class="intro_blurb">
+                <div class="col-md-6">
+                    <p class="lead">
+                        An unusual origin story for my interest in web development was created while playing a video game, <strong>Neopets</strong>.
+                        The site allowed users to customize a page for their pet and I wanted to have the best webpage for my Neopet.
+                    </p>
+                </div>
+                <div class="col-md-6">
+                    <p class="lead">
+                        I graduated from the University of Alabama in December, 2014 with a Management Information Systems degree.
+                        My first job is a software developer at a marketing firm, 2-COM.
+                        I serve as lead developer for our many client sites.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="contact" class="container">
+        <div class="row">
+            CONTENT
+        </div>
+    </div>
     <script src="scripts/jquery-1.11.3.min.js"></script>
     <script src="scripts/jquery-ui.min.js"></script>
     <script src="scripts/bootstrap.min.js"></script>
