Mobile z-index test2

--- a/index.html
+++ b/index.html
@@ -99,14 +99,14 @@
                 </div>
             </div>
         </div>
-        <div class="text-content">
+        <!--<div class="text-content">
             <h5 class="hello">Hello, world!</h5>
             <h5 class="jordan">
                 Made with
                 <i class="fa fa-heart"></i>
                 by Jordan McArdle
             </h5>
-        </div>
+        </div>-->
     </div>
     <div id="about" class="container">
         <div class="intro_title centered">
