--- a/index.html
+++ b/index.html
@@ -99,40 +99,73 @@
                 </div>
             </div>
         </div>
-        <!--<div class="text-content">
+        <div class="text-content">
             <h5 class="hello">Hello, world!</h5>
             <h5 class="jordan">
                 Made with
                 <i class="fa fa-heart"></i>
                 by Jordan McArdle
             </h5>
-        </div>-->
-    </div>
-    <div id="about" class="container">
-        <div class="intro_title centered">
-            <h2 class="bs">
-                I have a passion for web development <br />
-                with a focus on the user experience.
-            </h2>
-        </div>
-        <div class="intro_blurb">
-            <div class="col-md-6">
-                <p class="lead">
-                    An unusual origin story for my interest in web development was created while playing a video game, <strong>Neopets</strong>.
-                    The site allowed users to customize a page for their pet and I wanted to have the best webpage for my Neopet.
-                </p>
-            </div>
-            <div class="col-md-6">
-                <p class="lead">
-                    I graduated from the University of Alabama in December, 2014 with a Management Information Systems degree.
-                    My first job is a software developer at a marketing firm, 2-COM.
-                    I serve as lead developer for our many client sites.
-                </p>
-            </div>
         </div>
     </div>
-    <div id="contact" class="container">
-            CONTENT
+    <div id="about" class="ts">
+        <div class="container">
+            <div class="intro_title centered">
+                <h2 class="bs">
+                    I have a passion for web development <br />
+                    with a focus on the user experience.
+                </h2>
+            </div>
+            <div class="intro_blurb">
+                <div class="row">
+                    <div class="col-md-6">
+                        <p class="lead">
+                            An unusual origin story for my interest in web development was created while playing a video game, <strong>Neopets</strong>.
+                            The site allowed users to customize a page for their pet and I wanted to have the best webpage for my Neopet.
+                        </p>
+                    </div>
+                    <div class="col-md-6">
+                        <p class="lead">
+                            I graduated from the University of Alabama in December, 2014 with a degree in Management Information Systems degree. In January, 2015, I began working at a marketing firm, 2-COM.
+                            Currently, I serve as lead software developer on client sites.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="ts portfolio">
+        <div class="container centered">
+            <h2>Here's some work that I have done.</h2>
+        </div>
+        <div class="row">
+            <ul class="portfolio_work">
+                <li class="pi vanity_fair bw">
+                    <img class="logo_image" src="images/clients/bulwark.png" />
+                </li>
+                <li class="pi vanity_fair rka">
+                    <img class="logo_image" src="images/clients/rka.png" />
+                </li>
+                <li class="pi vanity_fair hs">
+                    <img class="logo_image" src="images/clients/hs.png" />
+                </li>
+                <li class="pi vanity_fair wpg">
+                    <img class="logo_image" src="images/clients/vf.png" />
+                </li>
+                <li class="pi yanmar">
+                    <img class="logo_image" src="images/clients/yt.png" />
+                </li>
+                <li class="pi cequip">
+                    <img class="logo_image" src="images/clients/col.png" />
+                </li>
+                <li class="pi cub">
+                    <img class="logo_image" src="images/clients/cub.png" />
+                </li>
+                <li class="pi ecom">
+                    <img class="logo_image" src="images/clients/2com.png" />
+                </li>
+            </ul>
+        </div>
     </div>
     <script src="scripts/jquery-1.11.3.min.js"></script>
     <script src="scripts/jquery-ui.min.js"></script>
