Image overlay work in progress

--- a/index.html
+++ b/index.html
@@ -140,33 +140,76 @@
         </div>
         <div class="row">
             <ul class="portfolio_work">
-                <li class="pi vanity_fair bw">
+                <li class="pi circle">
                     <img class="logo_image" src="images/clients/bulwark.png" />
+                    <div class="feature-overlay">
+                        <div class="feature-info bw">
+                            <h4>Bulwark FR</h4>
+                            <div><a href="http://bulwark.com" target="_blank">Site redesign</a> and an in-site <a href="http://bulwark.com/Calculator" target="_blank">Calculator application</a> for Fire-Resistant clothes</div>
+                        </div>
+                    </div>
                 </li>
-                <li class="pi vanity_fair rka">
-                    <img class="logo_image" src="images/clients/rka.png" />
-                </li>
-                <li class="pi vanity_fair hs">
+                <li class="pi circle">
                     <img class="logo_image" src="images/clients/hs.png" />
+                    <div class="feature-overlay">
+                        <div class="feature-info hs">
+                            <h4>Hello</h4>
+                        </div>
+                    </div>
                 </li>
-                <li class="pi vanity_fair wpg">
+                <li class="pi circle">
+                    <img class="logo_image" src="images/clients/rka.png" />
+                    <div class="feature-overlay">
+                        <div class="feature-info rka">
+                            <h4>Hello</h4>
+                            <div><a href="http://redkapautomotive.com" target="_blank">Site redesign</a> and <a href="http://www.redkapautomotive.com/ballistic" target="_blank">various promotional</a> pages.</div>
+                        </div>
+                    </div>
+                </li>
+                <li class="pi circle">
                     <img class="logo_image" src="images/clients/vf.png" />
+                    <div class="feature-overlay">
+                        <div class="feature-info vf">
+                            <h4>Hello</h4>
+                        </div>
+                    </div>
                 </li>
-                <li class="pi yanmar">
+                <li class="pi">
                     <img class="logo_image" src="images/clients/yt.png" />
+                    <div class="feature-overlay">
+                        <div class="feature-info yt">
+                            <h4>Hello</h4>
+                        </div>
+                    </div>
                 </li>
-                <li class="pi cequip">
+                <li class="pi">
                     <img class="logo_image" src="images/clients/col.png" />
+                    <div class="feature-overlay">
+                        <div class="feature-info col">
+                            <h4>Hello</h4>
+                        </div>
+                    </div>
                 </li>
                 <li class="pi cub">
                     <img class="logo_image" src="images/clients/cub.png" />
+                    <div class="feature-overlay">
+                        <div class="feature-info cub">
+                            <h4>Hello</h4>
+                        </div>
+                    </div>
                 </li>
                 <li class="pi ecom">
                     <img class="logo_image" src="images/clients/2com.png" />
+                    <div class="feature-overlay">
+                        <div class="feature-info ecom">
+                            <h4>Hello</h4>
+                        </div>
+                    </div>
                 </li>
             </ul>
         </div>
     </div>
+    <div id="contact"></div>
     <script src="scripts/jquery-1.11.3.min.js"></script>
     <script src="scripts/jquery-ui.min.js"></script>
     <script src="scripts/bootstrap.min.js"></script>
